# Novomatic

Kolizje/: CMakeLists.txt  collision.cpp  collision.hpp  main.cpp  test.cpp  triangle.hpp  vec2.hpp
Operacja_Binarna/: CMakeLists.txt  calculate.hpp  calculate.tpp  main.cpp  test.cpp
Szukajka/: CMakeLists.txt  main.cpp  searchengine.cpp  searchengine.hpp  test.cpp
